sviluppo verticale del DailyHours (controller, service, dtos)